feat: created intro component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,13 @@
   font-style: normal;
   font-display: swap;
 }
+@font-face {
+  font-family: 'Grotesk';
+  src: url('/fonts/tertiary/grotesk.ttf');
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
 
 html,
 body {
