--- a/src/app/styles/_fonts.scss
+++ b/src/app/styles/_fonts.scss
@@ -1,2 +1,3 @@
 $font-primary: 'Roboto', system-ui, -apple-system, sans-serif;
 $font-secondary: 'Futuralight', system-ui, sans-serif;
+$font-tertiary: 'Grotesk', system-ui, sans-serif;
